# protocol-lab

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.rtf  LICENSE.txt  README.md
.github/pkg/arch/: PKGBUILD.in
.github/workflows/: Build.yml  Release.yml  UML.yml
cmake/: ArchPkg.cmake  Deps.cmake  Release.cmake  Version.cmake
docs/: main.puml
include/pl/api/: Actions.hpp
include/pl/base/: BaseWave.hpp  BaseWaveCalculation.hpp  Noise.hpp
include/pl/conf/: Config.hpp
include/pl/core/: BaseWave.hpp  Calculator.hpp  Environment.hpp  Session.hpp  SignalData.hpp  Workspace.hpp
include/pl/inter/: ICalculation.hpp  IModule.hpp  ISignal.hpp
include/pl/ui/: Fonts.hpp  Node.hpp  Render.hpp  UiCore.hpp
include/pl/ui/dialogs/: NewProject.hpp  NewProjectHave.hpp
include/pl/ui/inter/: IRender.hpp
src/: CMakeLists.txt  Main.cpp
src/api/: Actions.cpp  CMakeLists.txt
src/base/: BaseWave.cpp  BaseWaveCalculation.cpp  CMakeLists.txt  Noise.cpp
src/conf/: CMakeLists.txt  Config.cpp
src/core/: BaseWave.cpp  CMakeLists.txt  Calculator.cpp  Environment.cpp  Session.cpp  SignalData.cpp  Workspace.cpp
src/ui/: CMakeLists.txt  Node.cpp  Render.cpp  UiCore.cpp
src/ui/dialogs/: NewProject.cpp  NewProjectHave.cpp
